# starlight

./: .gitignore  Cargo.toml  Justfile  bacon.toml  history.txt  pnpm-lock.yaml  seed_data.sql
deploy/: backend.service  database.service  deploy.sh  rust_backend.service  starlight.nginx.conf
src/: error.rs  main.rs
src/handlers/: dayofweek.rs  history.rs  location.rs  login.rs  mod.rs  reservation.rs  seed_data.rs  status.rs  timeslot.rs  user.rs  ws.rs
src/models/: dayofweek.rs  history.rs  location.rs  mod.rs  reservation.rs  timeslot.rs  user.rs
src/queries/: mod.rs
ui/: .env  .gitignore  auth.config.ts  auth.ts  environment.d.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
ui/app/: layout.tsx  page.tsx  providers.tsx  socket-provider.tsx
ui/app/api/: locations.ts
ui/app/dashboard/: ListboxWrapper.tsx  layout.tsx  page.tsx
ui/app/dashboard/admin/: page.tsx
ui/app/dashboard/history/: page.tsx
ui/app/dashboard/reservations/: page.tsx
ui/app/lib/: actions.ts  definitions.ts
ui/app/login/: page.tsx
ui/app/ui/: button.tsx  fonts.ts  gsctx-logo.tsx  login-form.tsx
ui/app/ui/dashboard/: nav-links.tsx  page.tsx  sidenav.tsx
ui/app/ui/side-nav/: nav-links.tsx  sidenav.tsx
