[package]
name = "starlight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0.198", features = ["derive"] }
surrealdb = "1.4.2"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
