[package]
name = "starlight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8", features = ["ws"] }
cached = { version = "0.54.0", features = ["async", "async_tokio_rt_multi_thread"] }
chrono = { version = "0.4", features = ["serde"], default-features = false }
chrono-tz = { version = "0.10", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
derive_more = {version="2", features= ["from"]}
env_logger = "0.11.3"
futures = { version = "0.3", default-features = false }
jsonwebtoken = "9.3.0"
log = "0.4.21"
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surrealdb = "2"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
test-case = "3.3.1"
